--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body{
   height: 150px;
   width: 150px;
   border-radius: 50%;
-  /* background-color: #333; */
-  background-image: linear-gradient(-225deg, #AC32E4 0%, #7918F2 48%, #4801FF 100%);
+  background-color: #333;
+  /*background-image: linear-gradient(-225deg, #AC32E4 0%, #7918F2 48%, #4801FF 100%);*/
   padding: 3px;
   margin-bottom: 10px;
 }
